syntax = "proto3";
package goldo.log;

message LogMessage {
  string message = 1;
  string name = 2;
  string pathname  = 3;
  int32 lineno = 4;
  int32 levelno  = 5;
  string func = 6;
}

