syntax = "proto3";
package goldo.nucleo;

message Heartbeat {
  fixed32 timestamp = 1;
}

message SensorsState {
  fixed32 state = 1;
}

message WatchdogState {
  bool main = 1;
  bool propulsion = 2;
  bool fpga = 3;
  bool odrive_comm = 4;
  bool dynamixels_comm = 5;
  bool servos = 6;
};

message FreeRTOSHeapStats {
  fixed32 xAvailableHeapSpaceInBytes = 1;
  fixed32 xSizeOfLargestFreeBlockInBytes = 2;
};
